fix #2 acceptor/connector url split into protocol, address, port
in artemis/broker_xml/acceptors (connectors) parameter url were split
into 3 parameters for better fine tuning.

instead of:
    url: tcp://0.0.0.0:5672
you will use:
    protocol: tcp
    address: 0.0.0.0
    port: 5672

This change will affect templates and profiles. This change may affect
existing users if they've exported profiles or are using cluster that
allows tuning of a cluster connector url.

~~
Relates:
    #2 split artemis acceptor/connector url into protocol, address, port
    MSGQE-5960 amqcfg tool should have divided acceptor url into protocol,
        address and port

--- a/amqcfg/templates/artemis/2.5.0/broker.xml.jinja2
+++ b/amqcfg/templates/artemis/2.5.0/broker.xml.jinja2
@@ -1,5 +1,6 @@
 <?xml version='1.0'?>
 {% from 'libs/utils.jinja2' import mbool without context %}
+{% from 'libs/utils.jinja2' import url without context %}
 {% include 'libs/headers/xml_header.jinja2' %}
 
 {% include 'libs/licenses/apache-2.0/xml.jinja2' %}
