--- a/amqcfg/templates/artemis/2.5.0/modules/broker_xml/acceptors.jinja2
+++ b/amqcfg/templates/artemis/2.5.0/modules/broker_xml/acceptors.jinja2
@@ -3,7 +3,7 @@
         <acceptors>
     {% for acceptor in broker_xml.acceptors %}
             <acceptor name="{{ acceptor.name }}">
-            {{- acceptor.url }}
+            {{- url(acceptor.protocol, acceptor.address, acceptor.port) -}}
             {%- if acceptor.properties is defined -%}
                 ?
                 {%- for option in acceptor.properties -%}
