Due to yaml spec https://yaml.org/type/bool.html some values can be interpreted as boolean values and therefore generated wrong results. To workaround this an extra_properties option to yacfg is added so that the caller can pass in some 'extra' information as key-value set. A filter is then added to check out on the extra properties and make proper overrides.

--- a/src/yacfg/templates/artemis/2.15.0/modules/broker_xml/address_settings.jinja2
+++ b/src/yacfg/templates/artemis/2.15.0/modules/broker_xml/address_settings.jinja2
@@ -4,10 +4,10 @@
             {% for address_setting in broker_xml.address_settings %}
             <address-setting match="{{ address_setting.match }}">
                 {% if address_setting.dead_letter_address is defined %}
-                <dead-letter-address>{{ address_setting.dead_letter_address }}</dead-letter-address>
+                <dead-letter-address>{{ address_setting.dead_letter_address|overridevalue(address_setting.match + 'dead_letter_address') }}</dead-letter-address>
                 {% endif %}
                 {% if address_setting.expiry_address is defined %}
-                <expiry-address>{{ address_setting.expiry_address }}</expiry-address>
+                <expiry-address>{{ address_setting.expiry_address|overridevalue(address_setting.match + 'expiry_address') }}</expiry-address>
                 {% endif %}
                 {% if address_setting.redelivery_delay is defined %}
                 <redelivery-delay>{{ address_setting.redelivery_delay }}</redelivery-delay>
@@ -16,13 +16,13 @@
                 <redistribution-delay>{{ address_setting.redistribution_delay }}</redistribution-delay>
                 {% endif %}
                 {% if address_setting.max_size_bytes is defined %}
-                <max-size-bytes>{{ address_setting.max_size_bytes }}</max-size-bytes>
+                <max-size-bytes>{{ address_setting.max_size_bytes|overridevalue(address_setting.match + 'max_size_bytes') }}</max-size-bytes>
                 {% endif %}
                 {% if address_setting.message_counter_history_day_limit is defined %}
                 <message-counter-history-day-limit>{{ address_setting.message_counter_history_day_limit }}</message-counter-history-day-limit>
                 {% endif %}
                 {% if address_setting.address_full_policy is defined %}
-                <address-full-policy>{{ address_setting.address_full_policy }}</address-full-policy>
+                <address-full-policy>{{ address_setting.address_full_policy|overridevalue(address_setting.match + 'address_full_policy') }}</address-full-policy>
                 {% endif %}
                 {% if address_setting.auto_create_queues is defined %}
                 <auto-create-queues>{{ mbool(address_setting.auto_create_queues) }}</auto-create-queues>
@@ -43,10 +43,10 @@
                 <max-size-bytes-reject-threshold>{{ address_setting.max_size_bytes_reject_threshold }}</max-size-bytes-reject-threshold>
                 {% endif %}
                 {% if address_setting.default_address_routing_type is defined %}
-                <default-address-routing-type>{{ address_setting.default_address_routing_type }}</default-address-routing-type>
+                <default-address-routing-type>{{ address_setting.default_address_routing_type|overridevalue(address_setting.match + 'default_address_routing_type') }}</default-address-routing-type>
                 {% endif %}
                 {% if address_setting.config_delete_addresses is defined %}
-                <config-delete-addresses>{{ address_setting.config_delete_addresses }}</config-delete-addresses>
+                <config-delete-addresses>{{ address_setting.config_delete_addresses|overridevalue(address_setting.match + 'config_delete_addresses') }}</config-delete-addresses>
                 {% endif %}
                 {% if address_setting.default_non_destructive is defined %}
                 <default-non-destructive>{{ mbool(address_setting.default_non_destructive) }}</default-non-destructive>
@@ -73,16 +73,16 @@
                 <send-to-dla-on-no-route>{{ mbool(address_setting.send_to_dla_on_no_route) }}</send-to-dla-on-no-route>
                 {% endif %}
                 {% if address_setting.default_last_value_key is defined %}
-                <default-last-value-key>{{ address_setting.default_last_value_key }}</default-last-value-key>
+                <default-last-value-key>{{ address_setting.default_last_value_key|overridevalue(address_setting.match + 'default_last_value_key') }}</default-last-value-key>
                 {% endif %}
                 {% if address_setting.slow_consumer_policy is defined %}
-                <slow-consumer-policy>{{ address_setting.slow_consumer_policy }}</slow-consumer-policy>
+                <slow-consumer-policy>{{ address_setting.slow_consumer_policy|overridevalue(address_setting.match + 'slow_consumer_policy') }}</slow-consumer-policy>
                 {% endif %}
                 {% if address_setting.auto_delete_jms_topics is defined %}
                 <auto-delete-jms-topics>{{ mbool(address_setting.auto_delete_jms_topics) }}</auto-delete-jms-topics>
                 {% endif %}
                 {% if address_setting.default_group_first_key is defined %}
-                <default-group-first-key>{{ address_setting.default_group_first_key }}</default-group-first-key>
+                <default-group-first-key>{{ address_setting.default_group_first_key|overridevalue(address_setting.match + 'default_group_first_key') }}</default-group-first-key>
                 {% endif %}
                 {% if address_setting.enable_metrics is defined %}
                 <enable-metrics>{{ mbool(address_setting.enable_metrics) }}</enable-metrics>
@@ -91,7 +91,7 @@
                 <min-expiry-delay>{{ address_setting.min_expiry_delay }}</min-expiry-delay>
                 {% endif %}
                 {% if address_setting.dead_letter_queue_suffix is defined %}
-                <dead-letter-queue-suffix>{{ address_setting.dead_letter_queue_suffix }}</dead-letter-queue-suffix>
+                <dead-letter-queue-suffix>{{ address_setting.dead_letter_queue_suffix|overridevalue(address_setting.match + 'dead_letter_queue_suffix') }}</dead-letter-queue-suffix>
                 {% endif %}
                 {% if address_setting.default_group_buckets is defined %}
                 <default-group-buckets>{{ address_setting.default_group_buckets }}</default-group-buckets>
@@ -103,7 +103,7 @@
                 <retroactive-message-count>{{ address_setting.retroactive_message_count }}</retroactive-message-count>
                 {% endif %}
                 {% if address_setting.dead_letter_queue_prefix is defined %}
-                <dead-letter-queue-prefix>{{ address_setting.dead_letter_queue_prefix }}</dead-letter-queue-prefix>
+                <dead-letter-queue-prefix>{{ address_setting.dead_letter_queue_prefix|overridevalue(address_setting.match + 'dead_letter_queue_prefix') }}</dead-letter-queue-prefix>
                 {% endif %}
                 {% if address_setting.default_ring_size is defined %}
                 <default-ring-size>{{ address_setting.default_ring_size }}</default-ring-size>
@@ -151,7 +151,7 @@
                 <max-redelivery-delay>{{ address_setting.max_redelivery_delay }}</max-redelivery-delay>
                 {% endif %}
                 {% if address_setting.default_queue_routing_type is defined %}
-                <default-queue-routing-type>{{ address_setting.default_queue_routing_type }}</default-queue-routing-type>
+                <default-queue-routing-type>{{ address_setting.default_queue_routing_type|overridevalue(address_setting.match + 'default_queue_routing_type') }}</default-queue-routing-type>
                 {% endif %}
                 {% if address_setting.slow_consumer_check_period is defined %}
                 <slow-consumer-check-period>{{ address_setting.slow_consumer_check_period }}</slow-consumer-check-period>
@@ -160,7 +160,7 @@
                 <slow-consumer-threshold>{{ address_setting.slow_consumer_threshold }}</slow-consumer-threshold>
                 {% endif %}
                 {% if address_setting.config_delete_queues is defined %}
-                <config-delete-queues>{{ address_setting.config_delete_queues }}</config-delete-queues>
+                <config-delete-queues>{{ address_setting.config_delete_queues|overridevalue(address_setting.match + 'config_delete_queues') }}</config-delete-queues>
                 {% endif %}
                 {% if address_setting.management_browse_page_size is defined %}
                 <management-browse-page-size>{{ address_setting.management_browse_page_size }}</management-browse-page-size>
@@ -169,13 +169,13 @@
                 <auto-delete-queues>{{ mbool(address_setting.auto_delete_queues) }}</auto-delete-queues>
                 {% endif %}
                 {% if address_setting.expiry_queue_suffix is defined %}
-                <expiry-queue-suffix>{{ address_setting.expiry_queue_suffix }}</expiry-queue-suffix>
+                <expiry-queue-suffix>{{ address_setting.expiry_queue_suffix|overridevalue(address_setting.match + 'expiry_queue_suffix') }}</expiry-queue-suffix>
                 {% endif %}
                 {% if address_setting.auto_delete_queues_message_count is defined %}
                 <auto-delete-queues-message-count>{{ address_setting.auto_delete_queues_message_count }}</auto-delete-queues-message-count>
                 {% endif %}
                 {% if address_setting.expiry_queue_prefix is defined %}
-                <expiry-queue-prefix>{{ address_setting.expiry_queue_prefix }}</expiry-queue-prefix>
+                <expiry-queue-prefix>{{ address_setting.expiry_queue_prefix|overridevalue(address_setting.match + 'expiry_queue_prefix') }}</expiry-queue-prefix>
                 {% endif %}
                 {% if address_setting.default_purge_on_no_consumers is defined %}
                 <default-purge-on-no-consumers>{{ mbool(address_setting.default_purge_on_no_consumers) }}</default-purge-on-no-consumers>
@@ -184,7 +184,7 @@
                 <default-exclusive-queue>{{ mbool(address_setting.default_exclusive_queue) }}</default-exclusive-queue>
                 {% endif %}
                 {% if address_setting.page_size_bytes is defined %}
-                <page-size-bytes>{{ address_setting.page_size_bytes }}</page-size-bytes>
+                <page-size-bytes>{{ address_setting.page_size_bytes|overridevalue(address_setting.match + 'page_size_bytes') }}</page-size-bytes>
                 {% endif %}
             </address-setting>
                 {% if not loop.last %}
