Adding new broker logging config support
When using default_with_user_address_settings.yaml.jinja2 profile
one can generate customized logging configurations so that
it only generate what the tune file specified, no more no less.
It can facilitate tools that use it to merge new logging config
into broker existing logging.configuration files.

--- a/src/yacfg/templates/artemis/2.16.0/logging.properties.jinja2
+++ b/src/yacfg/templates/artemis/2.16.0/logging.properties.jinja2
@@ -3,6 +3,7 @@
 
 {% include 'libs/licenses/apache-2.0/properties.jinja2' %}
 
+{% if logging_properties is defined %}
 # Additional logger names to configure (root logger is always configured)
 # Root logger option
 loggers={{ logging_properties.loggers|join(',') }}
@@ -47,3 +48,4 @@ formatter.{{ formatter.name }}.properties=
     {% endfor %}
 
 {% endfor %}
+{% endif %}
