--- a/src/yacfg/profiles/artemis/2.16.0/default_with_user_address_settings.yaml.jinja2
+++ b/src/yacfg/profiles/artemis/2.16.0/default_with_user_address_settings.yaml.jinja2
@@ -77,7 +77,7 @@ broker_xml:
 {% include 'artemis/2.16.0/_modules/users_roles_security/admin.yaml.jinja2' %}
 
 # bootstrap.xml
-{% include 'amq_broker/7.4.0/_modules/bootstrap_xml/allow.yaml.jinja2' %}
+{% include 'artemis/2.16.0/_modules/bootstrap_xml/allow.yaml.jinja2' %}
 
 # jolokia-access.xml
 {% include 'artemis/2.16.0/_modules/jolokia_access/localhost.yaml.jinja2' %}
