--- a/src/yacfg/profiles/artemis/2.17.0/showcase.yaml.jinja2
+++ b/src/yacfg/profiles/artemis/2.17.0/showcase.yaml.jinja2
@@ -143,6 +143,7 @@ broker_xml:
         - amq
         manage:
         - amq
+  security_settings_plugins:
     - class_name: org.apache.activemq.artemis.core.server.impl.LegacyLDAPSecuritySettingPlugin
       properties:
       - initialContextFactory: com.sun.jndi.ldap.LdapCtxFactory
