FIX wrong/shuffled includes in amq_broker 7.8.2 and 7.9.0 profiles

--- a/src/yacfg/profiles/amq_broker/7.9.0/default_win.yaml.jinja2
+++ b/src/yacfg/profiles/amq_broker/7.9.0/default_win.yaml.jinja2
@@ -53,7 +53,7 @@ broker_xml:
 {% include 'artemis/2.18.0/_modules/users_roles_security/admin.yaml.jinja2' %}
 
 # bootstrap.xml
-{% include 'amq_broker/7.7.0/_modules/bootstrap_xml/allow.yaml.jinja2' %}
+{% include 'artemis/2.18.0/_modules/bootstrap_xml/allow.yaml.jinja2' %}
 
 # jolokia-access.xml
 {% include 'artemis/2.18.0/_modules/jolokia_access/allow.yaml.jinja2' %}
