--- a/src/yacfg/profiles/amq_broker/7.8.2/store/jdbc/default.yaml.jinja2
+++ b/src/yacfg/profiles/amq_broker/7.8.2/store/jdbc/default.yaml.jinja2
@@ -52,7 +52,7 @@ broker_xml:
 
 {% include 'artemis/2.17.0/_modules/broker_xml/addresses/default.yaml.jinja2' %}
 
-{% include 'amq_broker/7.7.0/_modules/broker_xml/store/jdbc_store.yaml.jinja2' %}
+{% include 'artemis/2.17.0/_modules/broker_xml/store/jdbc_store.yaml.jinja2' %}
 
 
 # artemis.profile
@@ -62,7 +62,7 @@ broker_xml:
 {% include 'artemis/2.17.0/_modules/users_roles_security/admin.yaml.jinja2' %}
 
 # bootstrap.xml
-{% include 'amq_broker/7.7.0/_modules/bootstrap_xml/allow.yaml.jinja2' %}
+{% include 'artemis/2.17.0/_modules/bootstrap_xml/allow.yaml.jinja2' %}
 
 # jolokia-access.xml
 {% include 'artemis/2.17.0/_modules/jolokia_access/allow.yaml.jinja2' %}
