--- a/src/yacfg/templates/artemis/2.17.0/management.xml.jinja2
+++ b/src/yacfg/templates/artemis/2.17.0/management.xml.jinja2
@@ -7,7 +7,36 @@
     {% if management_xml.connector is defined %}
     <connector
       {%- if management_xml.connector.host is defined %} connector-host="{{ management_xml.connector.host }}"
-      {%- endif %}{% if management_xml.connector.port is defined %} connector-port="{{ management_xml.connector.port }}"
+      {%- endif %}
+      {% if management_xml.connector.port is defined %} connector-port="{{ management_xml.connector.port }}"
+      {%- endif -%}
+      {% if management_xml.connector.rmi_registry_port is defined %} rmi-registry-port="{{ management_xml.connector.rmi_registry_port }}"
+      {%- endif -%}
+      {% if management_xml.connector.jmx_realm is defined %} jmx-realm="{{ management_xml.connector.jmx_realm }}"
+      {%- endif -%}
+      {% if management_xml.connector.object_name is defined %} object-name="{{ management_xml.connector.object_name }}"
+      {%- endif -%}
+      {% if management_xml.connector.authenticator_type is defined %} authenticator-type="{{ management_xml.connector.authenticator_type }}"
+      {%- endif -%}
+      {% if management_xml.connector.secured is defined %} secured="{{ mbool(management_xml.connector.secured) }}"
+      {%- endif -%}
+      {% if management_xml.connector.key_store_provider is defined %} key-store-provider="{{ management_xml.connector.key_store_provider }}"
+      {%- endif -%}
+      {% if management_xml.connector.key_store_type is defined %} key-store-type="{{ management_xml.connector.key_store_type }}"
+      {%- endif -%}
+      {% if management_xml.connector.key_store_path is defined %} key-store-path="{{ management_xml.connector.key_store_path }}"
+      {%- endif -%}
+      {% if management_xml.connector.key_store_password is defined %} key-store-password="{{ management_xml.connector.key_store_password }}"
+      {%- endif -%}
+      {% if management_xml.connector.trust_store_provider is defined %} trust-store-provider="{{ management_xml.connector.trust_store_provider }}"
+      {%- endif -%}
+      {% if management_xml.connector.trust_store_type is defined %} trust-store-type="{{ management_xml.connector.trust_store_type }}"
+      {%- endif -%}
+      {% if management_xml.connector.trust_store_path is defined %} trust-store-path="{{ management_xml.connector.trust_store_path }}"
+      {%- endif -%}
+      {% if management_xml.connector.trust_store_password is defined %} trust-store-password="{{ management_xml.connector.trust_store_password }}"
+      {%- endif -%}
+      {% if management_xml.connector.password_codec is defined %} password-codec="{{ management_xml.connector.password_codec }}"
       {%- endif -%}
      />
     {% else -%}
